move api to new endpoints and old endpoints as aliases
